<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.statusesList.allSubmissions.AllSubmissionsStatusesListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <Button
                android:id="@+id/button_reported"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/submissions_list_reported"
                android:text="@string/reported"
                android:textAllCaps="false"
                android:textColor="@color/list_item_reported"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_accepted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/submission_statuses_list_top_margin"
                android:background="@drawable/submissions_list_accepted"
                android:text="@string/accepted"
                android:textAllCaps="false"
                android:textColor="@color/list_item_accepted"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_reported"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_in_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/submission_statuses_list_top_margin"
                android:background="@drawable/submissions_list_in_progress"
                android:text="@string/in_progress"
                android:textAllCaps="false"
                android:textColor="@color/list_item_in_progress"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_accepted"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/submission_statuses_list_top_margin"
                android:background="@drawable/submissions_list_finished"
                android:text="@string/finished"
                android:textAllCaps="false"
                android:textColor="@color/list_item_finished"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_in_progress"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_deleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/submission_statuses_list_top_margin"
                android:background="@drawable/submissions_list_deleted"
                android:text="@string/deleted"
                android:textAllCaps="false"
                android:textColor="@color/list_item_deleted"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_finished"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_suspended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/submission_statuses_list_top_margin"
                android:background="@drawable/submissions_list_suspended"
                android:text="@string/suspended"
                android:textAllCaps="false"
                android:textColor="@color/list_item_suspended"
                android:textSize="@dimen/list_cell_text_size"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_deleted"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>